# GalaxyWarC

./: CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: Bloque.cpp.96473AAA2C34A291.idx  Bloque.h.1264E328DF763D2D.idx  Bloque.h.53543232CF19FCF6.idx  Inventario.cpp.320DF2475B7884D9.idx  Inventario.h.19CC79F86103536B.idx  Inventario.h.D922B2F7589E8272.idx  Player.cpp.50919EC047371D21.idx  Player.h.BA629A18A29A0C54.idx  cgltf.h.BEB74AA6D66E200F.idx  config.h.1BA674B6109D13BF.idx  context.c.1906AFE286610089.idx  doctest.h.E165B0C47783A80E.idx  doctest.h.F41888F29013062E.idx  dr_mp3.h.65D5938B86495E51.idx  dr_wav.h.FBA1E31A7E936825.idx  egl_context.c.25A33614BF558E69.idx  glad.h.772A79A3D9A06132.idx  glfw3.h.039F91D27296A5B4.idx  glfw3native.h.EFEAE97D8EA2C250.idx  glx_context.c.D65295520E0D7C6C.idx  init.c.CF0FC72460278785.idx  input.c.5ADBCFE879A51F67.idx  internal.h.652161117E9C0F2E.idx  jar_mod.h.28C92837997F9F66.idx  jar_xm.h.BFAB541EAC888598.idx  linux_joystick.c.332D9D0CC6604B44.idx  linux_joystick.h.44BDDC91B5A710A2.idx  m3d.h.374831BBDDB5D4D4.idx  main.cpp.53F73031F4759B81.idx  mappings.h.D03B3031542A5D91.idx  miniaudio.h.329DF466D52876AF.idx  monitor.c.F32DA91B66DD549B.idx  msf_gif.h.64763E833E73C859.idx  null_init.c.8EB1E8E89A9F06B1.idx  null_joystick.c.53CF70A1C9FB7504.idx  null_joystick.h.316AB6C53843AB4B.idx  null_monitor.c.41073A01D7CB7150.idx  null_platform.h.565017A7FF482075.idx  null_window.c.D90265198F36D7F8.idx  osmesa_context.c.959D984F18029001.idx  (+50 more)
.github/workflows/: ci.yml  release.yml
resources/tracks/: bossIntro.c
src/: main.cpp
src/Blocks/: Bloque.cpp  Bloque.h
src/Entity/: Entity.h
src/Entity/Asteroid/: Asteroid.cpp  Asteroid.h
src/Entity/Blocks/: Bloque.cpp  Bloque.h
src/Entity/Boss/: Boss.cpp  Boss.h
src/Entity/Bullet/: Bullet.cpp  Bullet.h
src/Entity/Player/: Player.cpp  Player.h
src/GameController/: GameController.cpp  GameController.h
src/GameView/: GameView.cpp  GameView.h
src/GameView/View/: View.h
src/GameView/View/AsteroidView/: AsteroidView.cpp  AsteroidView.h
src/GameView/View/BossView/: BossView.cpp  BossView.h
src/GameView/View/BulletView/: BulletView.cpp  BulletView.h
src/GameView/View/PlayerView/: PlayerView.cpp  PlayerView.h
src/Inventory/: Inventario.cpp  Inventario.h
src/Player/: Player.cpp  Player.h
src/Position/: Position.cpp  Position.h
src/resources/: boss.c  bullet.c
src/resources/images/: asteroid.c  nave.c
src/resources/tracks/: Fire1.c
test/: testCollision.cpp  testInventario.cpp  testPlayer.cpp
